Chore: zh_cn translation--stage1, optimization of eventshandler